--- a/UI/PrisonersDilemmaUI/src/app/app.component.html
+++ b/UI/PrisonersDilemmaUI/src/app/app.component.html
@@ -7,5 +7,6 @@
   <ngx-json-viewer [json]="orchestrationInfo"></ngx-json-viewer>
 </div>
 <div *ngIf="!!status">
+  <button type="button" (click)="terminate()">terminate</button>
   <ngx-json-viewer [json]="status"></ngx-json-viewer>
 </div>
