--- a/UI/PrisonersDilemmaUI/src/app/app.component.html
+++ b/UI/PrisonersDilemmaUI/src/app/app.component.html
@@ -6,7 +6,17 @@
 <div *ngIf="!!orchestrationInfo">
   <ngx-json-viewer [json]="orchestrationInfo"></ngx-json-viewer>
 </div>
-<div *ngIf="!!status">
+<div *ngIf="!!competitionStatus">
   <button type="button" (click)="terminate()">terminate</button>
-  <ngx-json-viewer [json]="status"></ngx-json-viewer>
+  <ngx-json-viewer [json]="competitionStatus"></ngx-json-viewer>
+</div>
+<div *ngFor="let matchStatus of matchStatuss; let i = index">
+  Match {{ i }}
+  <ngx-json-viewer [json]="matchStatus"></ngx-json-viewer>
+  <mat-progress-bar
+    mode="determinate"
+    [value]="100 * (matchStatus?.gamesComplete / matchStatus?.numberOfGames)"
+    style="width: 250px;"
+  ></mat-progress-bar>
+  {{ matchStatus?.numberOfGames }}-{{ matchStatus?.gamesComplete }}
 </div>
