--- a/UI/PrisonersDilemmaUI/src/app/app.component.html
+++ b/UI/PrisonersDilemmaUI/src/app/app.component.html
@@ -10,12 +10,54 @@
   <button type="button" (click)="terminate()">terminate</button>
   <ngx-json-viewer [json]="competitionStatus"></ngx-json-viewer>
 </div>
+
+<table>
+  <tbody>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
+
 <mat-card *ngFor="let matchStatus of matchStatuss; let i = index">
-  Match {{ i }} : {{ matchStatus?.Player1 }} v {{ matchStatus?.Player2 }} :
-  {{ matchStatus?.stage }}
-  <mat-progress-bar
-    mode="determinate"
-    [value]="100 * (matchStatus?.gamesComplete / matchStatus?.numberOfGames)"
-    style="width: 250px;"
-  ></mat-progress-bar>
+  <div>Match: {{ matchStatus?.Player1 }} v {{ matchStatus?.Player2 }}</div>
+  <div>Status: {{ matchStatus?.stage }}</div>
+  <div>
+    Match progress:
+    <div style="display: inline-block">
+      <div style="display: inline-block">
+        <mat-progress-bar
+          mode="determinate"
+          [value]="
+            100 * (matchStatus?.gamesComplete / matchStatus?.numberOfGames)
+          "
+          style="width: 250px;"
+        ></mat-progress-bar>
+      </div>
+    </div>
+  </div>
+  <div>
+    King rat:
+    <div style="display: inline-block">
+      <div style="display: inline-block">
+        {{ matchStatus?.Player1 }}&nbsp;&nbsp;
+      </div>
+      <div style="display: inline-block">
+        <mat-progress-bar
+          color="warn"
+          mode="determinate"
+          [value]="
+            100 *
+            (matchStatus?.player1Rats /
+              (matchStatus?.player1Rats + matchStatus?.player2Rats))
+          "
+          style="width: 250px;"
+        ></mat-progress-bar>
+      </div>
+      <div style="display: inline-block">
+        &nbsp;&nbsp;{{ matchStatus?.Player2 }}
+      </div>
+    </div>
+  </div>
 </mat-card>
